# ASD

lab01/: README.md
lab01/rapport/: README.md
lab01/rapport/csv/: mesure_nombre_affectations_dataset_aleatoire.csv  mesure_nombre_affectations_dataset_croissant.csv  mesure_nombre_affectations_dataset_decroissant.csv  mesure_nombre_affectations_dataset_presque_trie.csv  mesure_nombre_operations_dataset_aleatoire.csv  mesure_nombre_operations_dataset_croissant.csv  mesure_nombre_operations_dataset_decroissant.csv  mesure_nombre_operations_dataset_presque_trie.csv  mesure_temps_de_calcul_dataset_aleatoire.csv  (+3 more)
lab01/src/: CMakeLists.txt  compte_op_af.cpp  op_counter.h  op_counter_impl.h  temps_calcul.cpp  test_tri.cpp  tools.h  tools_impl.h  tri.h  tri_impl.h
lab02/: README.md
lab02/rapport/: README.md
lab02/src/: CMakeLists.txt  figuresCompatibles.h  main.cpp  pieceOrientee.cpp  pieceOrientee.h  pieces.cpp  pieces.h  puzzle.cpp  puzzle.h
lab03/: README.md
lab03/rapport/: README.md  csv_to_svg.py
lab03/src/: CMakeLists.txt  creation_dataset.h  execution_time.h  execution_time_test.cpp  export_csv.h  main_somebits_demo.cpp  sort_test.cpp  sort_test_utils.h  sort_test_utils_impl.h  tri_par_base.h  tri_rapide.h
lab04/Allocations/: main.cpp
lab04/Pile/: pile_impl.h
lab05/: README.md
lab05/src/: ArrayDeque.h  cc1.cpp  cc4.cpp
lab06/src/: ListeSimple.h
lab07/src/: evaluator.cpp  evaluator_recursive.cpp
lab08/: .gitignore
lab08/src/: CMakeLists.txt  avlNode.h  avlNodeImplementation.h  avlTree.h  avlTreeImplementation.h  main.cpp
(+4 files in other folders)
